news icons added

--- a/marvelhomes/account/templates/all_property.html
+++ b/marvelhomes/account/templates/all_property.html
@@ -51,7 +51,7 @@
                              {{prop.payment_plan}} PAYMENT PLAN
                          </div>
                          <a href="{% url 'property_detail' prop.id %}">
-                          <img src="{{prop.image.url}}" class="card-img-top" alt="Logo">
+                          <img src="{{prop.image.url}}" class="card-img-top" alt="Logo" style="height: 18rem;">
                          </a>
                          <div class="card-body">
                              <p class="card-text">
@@ -90,7 +90,7 @@
                              {{prop.payment_plan}} PAYMENT PLAN
                          </div>
                          <a href="{% url 'property_detail' prop.id %}">
-                          <img src="{{prop.image.url}}" class="card-img-top" alt="Logo">
+                          <img src="{{prop.image.url}}" class="card-img-top" alt="Logo" style="height: 18rem;">
                          </a>
                          <div class="card-body">
                              <p class="card-text">
@@ -127,7 +127,7 @@
                              {{prop.payment_plan}} PAYMENT PLAN
                          </div>
                          <a href="{% url 'property_detail' prop.id %}">
-                          <img src="{{prop.image.url}}" class="card-img-top" alt="Logo">
+                          <img src="{{prop.image.url}}" class="card-img-top" style="height: 18rem;" alt="Logo">
                          </a>
                          <div class="card-body">
                              <p class="card-text">
@@ -165,7 +165,7 @@
                              {{prop.payment_plan}} PAYMENT PLAN
                          </div>
                          <a href="{% url 'property_detail' prop.id %}">
-                          <img src="{{prop.image.url}}" class="card-img-top" alt="Logo">
+                          <img src="{{prop.image.url}}" class="card-img-top" style="height: 18rem;" alt="Logo">
                          </a>
                          <div class="card-body">
                              <p class="card-text">
