--- a/marvelhomes/account/templates/property_details.html
+++ b/marvelhomes/account/templates/property_details.html
@@ -19,11 +19,29 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <style>
+            .up_arrow{
+                position: fixed;
+                right: 2rem;
+                bottom: 2rem;
+                height: 2.8rem;
+                width: 2.8rem;
+                background-color: #000;
+                display: grid;
+                place-content: center;
+            }
+            .up_arrow i {
+                color: white;
+            }
+        </style>
     </head>
 
     <body>
         {% include "inc/nav.html" %}
-        <div class="container mt-5">
+        <div class="container mt-5" id="start">
+            <div class="up_arrow">
+                <a href="#start"><i class="fa-solid fa-chevron-up"></i></a>
+            </div>
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item"><a href="{% url '' %}" style="text-decoration: none; color: #000;">Home</a></li>
@@ -198,7 +216,7 @@
                 </div>
             </div>
            </div>
-
+           
         </div>
         {% include "inc/footer.html" %}
 
