--- a/marvelhomes/account/templates/all_developer.html
+++ b/marvelhomes/account/templates/all_developer.html
@@ -49,11 +49,9 @@
                   {% for prop in property %}
                   <div class="col-lg-4 col-md-6">
                    <div class="card mb-4">
-                       {% if prop.is_off_plan %}
-                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;">
-                           OFF PLAN
-                       </div>
-                       {% endif %}
+                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
+                        {{prop.status | upper}}
+                    </div>
                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                            {{prop.payment_plan}} PAYMENT PLAN
                        </div>
@@ -89,11 +87,9 @@
               {% for prop in emaar %}
               <div class="col-lg-4 col-md-6">
                <div class="card mb-4">
-                   {% if prop.is_off_plan %}
-                   <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;">
-                       OFF PLAN
-                   </div>
-                   {% endif %}
+                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
+                    {{prop.status | upper}}
+                </div>
                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                        {{prop.payment_plan}} PAYMENT PLAN
                    </div>
@@ -131,11 +127,9 @@
                   {% for prop in nakheel %}
                   <div class="col-lg-4 col-md-6">
                    <div class="card mb-4">
-                       {% if prop.is_off_plan %}
-                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;">
-                           OFF PLAN
-                       </div>
-                       {% endif %}
+                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
+                        {{prop.status | upper}}
+                    </div>
                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                            {{prop.payment_plan}} PAYMENT PLAN
                        </div>
@@ -172,11 +166,9 @@
                 {% for prop in meraas %}
                 <div class="col-lg-4 col-md-6">
                  <div class="card mb-4">
-                     {% if prop.is_off_plan %}
-                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;">
-                         OFF PLAN
-                     </div>
-                     {% endif %}
+                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
+                        {{prop.status | upper}}
+                    </div>
                      <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                          {{prop.payment_plan}} PAYMENT PLAN
                      </div>
@@ -212,11 +204,9 @@
                   {% for prop in damac %}
                   <div class="col-lg-4 col-md-6">
                    <div class="card mb-4">
-                       {% if prop.is_off_plan %}
-                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;">
-                           OFF PLAN
-                       </div>
-                       {% endif %}
+                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
+                        {{prop.status | upper}}
+                    </div>
                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                            {{prop.payment_plan}} PAYMENT PLAN
                        </div>
@@ -253,11 +243,9 @@
                   {% for prop in sobha %}
                   <div class="col-lg-4 col-md-6">
                    <div class="card mb-4">
-                       {% if prop.is_off_plan %}
-                       <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;">
-                           OFF PLAN
-                       </div>
-                       {% endif %}
+                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
+                        {{prop.status | upper}}
+                    </div>
                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                            {{prop.payment_plan}} PAYMENT PLAN
                        </div>
