--- a/marvelhomes/account/templates/email_forsellers.html
+++ b/marvelhomes/account/templates/email_forsellers.html
@@ -13,10 +13,10 @@
     </tr>
     <tr>
       <th>Mobile Number</th>
-      <td>{{ data.ph }}</td>
+      <td>{{ data.phone }}</td>
     </tr>
     <tr>
         <th>Email</th>
-        <td>{{ data.ph1 }}</td>
+        <td>{{ data.email }}</td>
     </tr>
   </table>
