--- a/marvelhomes/account/templates/category_property.html
+++ b/marvelhomes/account/templates/category_property.html
@@ -33,11 +33,9 @@
               {% for prop in property %}
               <div class="col-lg-4 col-md-6">
                <div class="card mb-4">
-                   {% if prop.is_off_plan %}
-                   <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;">
-                       OFF PLAN
-                   </div>
-                   {% endif %}
+                <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
+                    {{prop.status | upper}}
+                </div>
                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                        {{prop.payment_plan}} PAYMENT PLAN
                    </div>
