--- a/marvelhomes/account/templates/developer.html
+++ b/marvelhomes/account/templates/developer.html
@@ -55,11 +55,9 @@
                 {% for prop in properties %}
                 <div class="col mb-5">
                  <div class="card h-100 mb-4">
-                     {% if prop.is_off_plan %}
-                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;">
-                         OFF PLAN
-                     </div>
-                     {% endif %}
+                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
+                        {{prop.status | upper}}
+                    </div>
                      <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                          {{prop.payment_plan}} PAYMENT PLAN
                      </div>
