--- a/marvelhomes/account/templates/mainpage.html
+++ b/marvelhomes/account/templates/mainpage.html
@@ -171,7 +171,7 @@
                        {% for prop in properties %}
                        <div class="col mb-5">
                         <div class="card h-100 mb-4">
-                            <div id="carouselExampleControls" class="carousel slide z-0" data-bs-ride="carousel" style="position: relative;">
+                            <div id="carouselExampleControls{{forloop.counter0}}" class="carousel slide z-0" data-interval="false" style="position: relative;">
                                 <div class="carousel-inner position-relative">
                                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
                                         {{prop.status | upper}}
@@ -253,11 +253,11 @@
                                     </a>
                                   </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls{{forloop.counter0}}" data-bs-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls{{forloop.counter0}}" data-bs-slide="next">
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Next</span>
                                 </button>
