--- a/marvelhomes/account/templates/inc/navbar.html
+++ b/marvelhomes/account/templates/inc/navbar.html
@@ -523,7 +523,9 @@
                         <a class="nav-link" href="{% url "news" %}">NEWS</a>
                     </li>
                     <li class="nav-item">
-                        <i class="fa-solid fa-user"></i>
+                            <a href="{% url "admin:index" %}" class="btn btn-dark">
+                                <i class="fa-solid fa-user"> </i>
+                            </a>
                     </li>
                    
                 </ul> 
