--- a/marvelhomes/account/templates/mainpage.html
+++ b/marvelhomes/account/templates/mainpage.html
@@ -173,9 +173,11 @@
                         <div class="card h-100 mb-4">
                             <div id="carouselExampleControls{{forloop.counter0}}" class="carousel slide z-0" data-interval="false" style="position: relative;">
                                 <div class="carousel-inner position-relative">
+                                    {% if prop.status %}
                                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 10rem;z-index: 10000;">
                                         {{prop.status | upper}}
                                     </div>
+                                    {% endif %}
                                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem;z-index: 10000;">
                                         {{prop.payment_plan}} PAYMENT PLAN
                                     </div>
